--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -3,7 +3,7 @@ header
 nav
   span
     a(title='主页' href='/') 主页
-  - if(user)
+  - if(username)
     span
       a(title='发表' href='/post') 发表
     span
